# mail_sender

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  sample_config.hpp  sample_config.yml  sample_mail_sender_main.cpp
mail_sender/: CMakeLists.txt  mail_sender.cpp  mail_sender.hpp
